force-app/main/default/objects/HOVER_Webhook_Config__c/HOVER_Webhook_Config__c.object-meta.xml
<CustomObject>
    <label>HOVER Webhook Config</label>
    <nameField>
        <label>HOVER Webhook Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HOVER Webhook Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>