force-app/main/default/objects/HOVER_Webhook_Config__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>