force-app/main/default/objects/HOVER_Webhook_Config__c/fields/HOVER_Webhook_ID__c.field-meta.xml
<CustomField>
    <fullName>HOVER_Webhook_ID__c</fullName>
    <label>HOVER Webhook ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>