force-app/main/default/objects/HOVER_Webhook_Config__c/fields/Verification_Code__c.field-meta.xml
<CustomField>
    <fullName>Verification_Code__c</fullName>
    <label>Verification Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>